--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "material-components-web": "^0.28.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.7",
-    "swiper": "^4.3.3",
+    "swiper": "^4.4.6",
     "vue": "^2.5.16",
-    "vue-mdc-adapter": "0.16.2",
+    "vue-mdc-adapter": "0.18.2",
     "vue-router": "^3.0.1",
-    "vue-smooth-scroll": "^1.0.13"
+    "vue-smooth-scroll": "^1.0.13",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "devDependencies": {
     "animate.js": "^1.4.0",
