--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^6.0.7",
     "swiper": "^4.4.6",
+    "typewriter-effect": "^2.5.2",
     "vue": "^2.5.16",
-    "vue-mdc-adapter": "0.18.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-mdc-adapter": "^0.18.2",
     "vue-router": "^3.0.1",
-    "vue-smooth-scroll": "^1.0.13",
-    "vue-awesome-swiper": "^3.1.3"
+    "vue-smooth-scroll": "^1.0.13"
   },
   "devDependencies": {
     "animate.js": "^1.4.0",
