--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.16",
     "vue-awesome-swiper": "^3.1.3",
     "vue-mdc-adapter": "^0.18.2",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-smooth-scroll": "^1.0.13"
   },
