--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/card": "^2.0.30",
+    "@nextui-org/input": "^2.0.30",
     "@nextui-org/chip": "^2.0.30",
     "@nextui-org/button": "^2.0.30",
     "@nextui-org/image": "^2.0.27",
