--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/card": "^2.0.30",
-    "@nextui-org/input": "^2.0.30",
-    "@nextui-org/chip": "^2.0.30",
-    "@nextui-org/button": "^2.0.30",
-    "@nextui-org/image": "^2.0.27",
-    "@nextui-org/link": "^2.0.29",
-    "@nextui-org/divider": "^2.0.29",
-    "@nextui-org/navbar": "^2.0.30",
-    "@nextui-org/system": "^2.1.2",
-    "@nextui-org/theme": "^2.2.2",
+    "@heroui/card": "2.2.16",
+    "@heroui/input": "2.4.17",
+    "@heroui/chip": "2.2.13",
+    "@heroui/button": "2.2.17",
+    "@heroui/image": "2.2.10",
+    "@heroui/link": "2.2.14",
+    "@heroui/divider": "2.2.11",
+    "@heroui/navbar": "2.2.15",
+    "@heroui/system": "2.4.13",
+    "@heroui/theme": "2.4.13",
     "framer-motion": "^11.1.7",
     "next": "14.2.2",
     "react": "^18",
