Upgraded tailwind, HeroUi & Next

--- a/package.json
+++ b/package.json
@@ -9,30 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroui/card": "2.2.16",
-    "@heroui/input": "2.4.17",
-    "@heroui/chip": "2.2.13",
-    "@heroui/button": "2.2.17",
-    "@heroui/image": "2.2.10",
-    "@heroui/link": "2.2.14",
-    "@heroui/divider": "2.2.11",
-    "@heroui/navbar": "2.2.15",
-    "@heroui/system": "2.4.13",
-    "@heroui/theme": "2.4.13",
-    "framer-motion": "^11.1.7",
-    "next": "14.2.2",
-    "react": "^18",
-    "react-dom": "^18",
+    "@heroui/button": "2.2.24",
+    "@heroui/card": "^2.2.23",
+    "@heroui/chip": "^2.2.20",
+    "@heroui/divider": "^2.2.17",
+    "@heroui/image": "^2.2.15",
+    "@heroui/input": "^2.4.25",
+    "@heroui/link": "^2.2.21",
+    "@heroui/navbar": "^2.2.22",
+    "@heroui/system": "2.4.20",
+    "@heroui/theme": "^2.4.20",
+    "framer-motion": "^12.23.12",
+    "next": "^15.4.5",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
